# regular_expr_task

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  lib.cpp  lib.hpp  main.cpp
test/: test.cpp
